Add API controller for HEAD requests for task content metadata information.
